<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorblack"
        android:textSize="18dp"
        android:text="@string/nhapsoluong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginLeft="5dp"
        android:textSize="13dp"
        android:text="@string/nhapsoluongcanthem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilsoluong_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:inputType="numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnThemmaytinh_dialog"
            android:text="@string/them"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_green"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnhuy_dialog"
            android:textColor="@color/colorWhite"
            android:text="@string/huy"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_red"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>