<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LichSuActivity">

    <android.support.v7.widget.Toolbar
        app:title="@string/lichsu"
        android:id="@+id/toolbarlichsu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_toolbar"
        app:titleTextColor="@color/colorWhite">
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:background="@color/colorbackground"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="center"
            android:background="@drawable/background_title"
            android:textColor="@color/colorWhite"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/lichsucapnhat"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvmaytinh_lscapnhat"
                    android:paddingBottom="30dp"
                    android:paddingTop="30dp"
                    android:gravity="center"
                    android:textColor="@color/colorblack"
                    android:textSize="18dp"
                    android:text="@string/maytinhctp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvthietbikhac_lscapnhat"
                    android:paddingBottom="30dp"
                    android:paddingTop="30dp"
                    android:gravity="center"
                    android:textColor="@color/colorblack"
                    android:textSize="18dp"
                    android:text="@string/thietbikhacls"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.v7.widget.CardView>

        </LinearLayout>


        <TextView
            android:gravity="center"
            android:background="@drawable/background_title"
            android:textColor="@color/colorWhite"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/lichsusuachua"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvmaytinh_lssuachua"
                    android:paddingBottom="30dp"
                    android:paddingTop="30dp"
                    android:gravity="center"
                    android:textColor="@color/colorblack"
                    android:textSize="18dp"
                    android:text="@string/maytinhctp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvthietbikhac_lssuachua"
                    android:paddingBottom="30dp"
                    android:paddingTop="30dp"
                    android:gravity="center"
                    android:textColor="@color/colorblack"
                    android:textSize="18dp"
                    android:text="@string/thietbikhacls"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>